Changes in auth module, product module and productSellerModule

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
     "type": "postgres",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "port": 5432,
     "username": "postgres",
-    "password": "postgres",
+    "password": "",
     "database": "users",
     "entities": ["dist/**/*.entity{.ts,.js}"],
     "synchronize": true
